051_read_leaks/grade.txt
Grading at 09/27/2018:15:07:03.172513
For commit ID ba39b31c61c05099fc61f4b6c10bccae4d15a7ca
Your file matched the expected output
Your output matched what we expected
Attempting to compile test.c
test.c: In function ‘main’:
test.c:22:1: error: version control conflict marker in file
 <<<<<<< HEAD
 ^~~~~~~
test.c:25:1: error: version control conflict marker in file
 =======
 ^~~~~~~
test.c:28:1: error: version control conflict marker in file
 >>>>>>> 5e02df56dad2eb125a1a66ecd86db9baf7996374
 ^~~~~~~
test.c:28:9: error: invalid suffix "df56dad2eb125a1a66ecd86db9baf7996374" on floating constant
 >>>>>>> 5e02df56dad2eb125a1a66ecd86db9baf7996374
         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
The code did not compile!

Overall Grade: C
